Parser/test_cases/bad/sdispatchnodot.cl
class Hello {

   foo:Int <- 89;
   bar:Int;
   
   foo(a:Int, b:Int, c:String): Int  {
      foo@Goodbye foo(a, b, c)
   };
   
   bar() :Int {
      6
   };
   
   
};
